# gzip-hpp

./: .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
bench/: run.cpp
include/: compress.hpp  decompress.hpp  gzip.hpp
include/gzip/: compress.hpp  decompress.hpp  utils.hpp  version.hpp
scripts/: format.sh  setup.sh
test/: catch.hpp  test.cpp  test_io.cpp  test_version.cpp
